--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -1,5 +1,5 @@
 <!-- <h1><mat-icon class="icon-cart">shopping_cart</mat-icon> Mi Carrito de compras </h1> -->
-<page-header text="Mi Carrito de compras" icon="shopping_cart"></page-header>
+<page-header text="Carrito de compras" icon="shopping_cart"></page-header>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Mis productos seleccionados">
     <table class="table table-striped align-middle">
@@ -20,6 +20,13 @@
           <td>{{product.category.description}}</td>
           <td>$ {{product.price}} ARS</td>
           <td><button (click)="eliminarProductoDelCarrito(product)" _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
+        </tr>
+        <tr *ngIf="products.length == 0">
+          <td class="text-danger">Usted no ha agregado productos a su carrito</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
 
         <tr *ngIf="precioTotalCarrito" class="fila-total-precio">
@@ -60,11 +67,11 @@
                                           <h6 class="text-muted f-w-400 info-user">{{user?.email}}</h6>
                                       </div>
                                       <div class="col-sm-6">
-                                          <p class="m-b-10 f-w-600">Nombre Completo</p>
+                                          <p class="m-b-10 f-w-600">Nombre completo</p>
                                           <h6 class="text-muted f-w-400 info-user">{{user?.firstName}} {{user?.lastName}}</h6>
                                       </div>
                                   </div>
-                                  <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Domicilio</h6>
+                                  <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Domicilio de entrega</h6>
                                   <div class="row">
                                       <div class="col-sm-6">
                                           <p class="m-b-10 f-w-600">Dirección</p>
@@ -74,6 +81,13 @@
                                         <p class="m-b-10 f-w-600">Ubicación</p>
                                         <h6 class="text-muted f-w-400 info-user">{{user?.address.city}}, {{user?.address.province}}, {{user?.address.country}}</h6>
                                     </div>
+                                  </div>
+                                  <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Datos de la compra</h6>
+                                  <div class="row">
+                                      <div class="col-sm-6">
+                                          <p class="m-b-10 f-w-600">Precio total de la compra</p>
+                                          <h6 class="text-muted f-w-400 info-user">$ {{precioTotalCarrito}} ARS</h6>
+                                      </div>
                                   </div>
                                   
                                   <ul class="social-link list-unstyled m-t-40 m-b-10">
