--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -15,9 +15,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let product of products" >
-          <td><img src="https://img.icons8.com/bubbles/2x/product.png" class="img-producto">  {{product.name}}</td>
-          <td>{{product.description}}</td>
-          <td>{{product.category.description}}</td>
+          <td><img src="{{product.imageUrl}}" class="img-producto border border-primary">  {{product.name}}</td>
+          <td><mat-icon class="text-primary btn-info-description" data-toggle="tooltip" data-placement="left" title="{{product.description}}" >info</mat-icon></td>
+          <td>{{product.category.description}} </td>
           <td>$ {{product.price}} ARS</td>
           <td><button (click)="eliminarProductoDelCarrito(product)" _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
         </tr>
@@ -115,3 +115,12 @@
 
 <button *ngIf="products.length > 0" (click)="vaciarCarrito()" mat-raised-button color="primary" class="btn-vaciar-carrito">Vaciar Carrito<mat-icon>remove_shopping_cart</mat-icon></button>
 <button *ngIf="products.length > 0" (click)="confirmarCompra()" mat-raised-button color="primary" class="btn-confirmar-compra">Comprar<mat-icon>done_all</mat-icon></button>
+
+
+<script>
+  $(function () {
+ 
+ $('[data-toggle="tooltip"]').tooltip()
+
+})
+</script>
