--- a/src/app/pages/eager/layout/auth-dialog/auth-dialog.component.html
+++ b/src/app/pages/eager/layout/auth-dialog/auth-dialog.component.html
@@ -5,7 +5,12 @@
 
   <mat-tab-group mat-align-tabs="center" #tabGroup>
     <mat-tab label="Login">
-      <form class="mt-3" (ngSubmit)="submitLogin()" [formGroup]="loginForm">
+      <form
+        class="mt-3"
+        *ngIf="!showForgotPassword && !showForgotPasswordConfirm"
+        (ngSubmit)="submitLogin()"
+        [formGroup]="loginForm"
+      >
         <div fxLayout="column">
           <mat-form-field>
             <mat-label>Email</mat-label>
@@ -37,9 +42,102 @@
           >
             Ingresar
           </button>
+          <button
+            class="mt-3 p-1"
+            mat-button
+            mat-raised-button
+            [disabled]="processing"
+            (click)="handleForgotPassword()"
+          >
+            Recuperar Contraseña
+          </button>
+        </div>
+      </form>
+      <form
+        *ngIf="showForgotPassword"
+        class="mt-3"
+        (ngSubmit)="submitForgotPassword()"
+        [formGroup]="forgotPasswordForm"
+      >
+        <div fxLayout="column">
+          <mat-form-field>
+            <mat-label>Email</mat-label>
+            <input matInput type="text" formControlName="email" />
+            <mat-error *ngIf="forgotPasswordForm.email?.hasError('email')">
+              El Email es invalido.
+            </mat-error>
+            <mat-error *ngIf="forgotPasswordForm.email?.hasError('required')">
+              El Email es requerido.
+            </mat-error>
+          </mat-form-field>
+          <button
+            class="mt-3"
+            type="submit"
+            mat-button
+            mat-raised-button
+            color="primary"
+            [disabled]="forgotPasswordForm.invalid || processing"
+          >
+            Enviar
+          </button>
+          <button
+            class="mt-3 p-1"
+            mat-button
+            mat-raised-button
+            [disabled]="processing"
+            (click)="handleGoBackLogin()"
+          >
+            Volver al Login
+          </button>
+        </div>
+      </form>
+      <form
+        *ngIf="showForgotPasswordConfirm"
+        class="mt-3"
+        (ngSubmit)="submitForgotPasswordConfirm()"
+        [formGroup]="forgotPasswordConfirmForm"
+      >
+        <div fxLayout="column">     
+          <mat-form-field>
+            <mat-label>Codigo</mat-label>
+            <input matInput type="text" formControlName="code" />
+            <mat-error *ngIf="forgotPasswordConfirmForm.code?.hasError('required')">
+              El Codigo es requerido.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password" />
+            <mat-error *ngIf="forgotPasswordConfirmForm.password?.hasError('minlength')">
+              El Password debe tener al menos 6 caracteres.
+            </mat-error>
+            <mat-error *ngIf="forgotPasswordConfirmForm.password?.hasError('required')">
+              El Password es requerido.
+            </mat-error>
+          </mat-form-field> 
+          <button
+            class="mt-3"
+            type="submit"
+            mat-button
+            mat-raised-button
+            color="primary"
+            [disabled]="forgotPasswordConfirmForm.invalid || processing"
+          >
+            Recuperar
+          </button>
+          <button
+            class="mt-3 p-1"
+            mat-button
+            mat-raised-button
+            [disabled]="processing"
+            (click)="handleGoBackLogin()"
+          >
+            Volver al Login
+          </button>
         </div>
       </form>
     </mat-tab>
+
     <mat-tab label="Registrarse">
       <form
         *ngIf="!registerFormSuccess"
